--- a/immich-web/immich/immich.yaml
+++ b/immich-web/immich/immich.yaml
@@ -1046,11 +1046,10 @@ spec:
         app.kubernetes.io/component: primary
       annotations:
     spec:
+      hostUsers: false
       serviceAccountName: default
-      
       affinity:
         podAffinity:
-          
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - podAffinityTerm:
@@ -1064,13 +1063,10 @@ spec:
                 topologyKey: kubernetes.io/hostname
               weight: 1
         nodeAffinity:
-          
       securityContext:
         runAsUser: 65533
         runAsGroup: 65533
         fsGroup: 65533
-      hostNetwork: false
-      hostIPC: false
       initContainers:
       containers:
         - name: postgresql
