--- a/immich-web/immich/immich.yaml
+++ b/immich-web/immich/immich.yaml
@@ -934,10 +934,11 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: le-example-http
     kubernetes.io/ingress.class: nginx
+    external-dns.alpha.kubernetes.io/hostname: immich.dev-riles.xyz.
     nginx.ingress.kubernetes.io/proxy-body-size: 500m
 spec:
   rules:
-  - host: "immich.riles.xyz"
+  - host: "immich.dev-riles.xyz"
     http:
       paths:
         - path: /
@@ -949,7 +950,7 @@ spec:
                 number: 3000
   tls:
   - hosts:
-    - immich.riles.xyz
+    - immich.dev-riles.xyz
     secretName: tls-immich-ingress-http
 ---
 # Source: immich/charts/postgresql/templates/primary/svc-headless.yaml
