--- a/immich-web/immich/immich.yaml
+++ b/immich-web/immich/immich.yaml
@@ -464,11 +464,11 @@ spec:
             - name: DB_HOSTNAME
               value: immich-postgresql
             - name: IMMICH_MACHINE_LEARNING_URL
-              value: http://immich-machine-learning:3003
+              value: http://immich-machine-learning.productivity.svc.cluster.local:3003
             - name: IMMICH_SERVER_URL
-              value: http://immich-server:3001
+              value: http://immich-server.productivity.svc.cluster.local:3001
             - name: IMMICH_WEB_URL
-              value: http://immich-web:3000
+              value: http://immich-web.productivity.svc.cluster.local:3000
             - name: REDIS_HOSTNAME
               value: immich-redis-master
             - name: REVERSE_GEOCODING_DUMP_DIRECTORY
@@ -543,11 +543,11 @@ spec:
             - name: DB_HOSTNAME
               value: immich-postgresql
             - name: IMMICH_MACHINE_LEARNING_URL
-              value: http://immich-machine-learning:3003
+              value: http://immich-machine-learning.productivity.svc.cluster.local:3003
             - name: IMMICH_SERVER_URL
-              value: http://immich-server:3001
+              value: http://immich-server.productivity.svc.cluster.local:3001
             - name: IMMICH_WEB_URL
-              value: http://immich-web:3000
+              value: http://immich-web.productivity.svc.cluster.local:3000
             - name: REDIS_HOSTNAME
               value: immich-redis-master
             - name: TYPESENSE_API_KEY
@@ -629,11 +629,11 @@ spec:
             - name: DB_HOSTNAME
               value: immich-postgresql
             - name: IMMICH_MACHINE_LEARNING_URL
-              value: http://immich-machine-learning:3003
+              value: http://immich-machine-learning.productivity.svc.cluster.local:3003
             - name: IMMICH_SERVER_URL
-              value: http://immich-server:3001
+              value: http://immich-server.productivity.svc.cluster.local:3001
             - name: IMMICH_WEB_URL
-              value: http://immich-web:3000
+              value: http://immich-web.productivity.svc.cluster.local:3000
             - name: REDIS_HOSTNAME
               value: immich-redis-master
             - name: TYPESENSE_API_KEY
@@ -722,11 +722,11 @@ spec:
             - name: DB_HOSTNAME
               value: immich-postgresql
             - name: IMMICH_MACHINE_LEARNING_URL
-              value: http://immich-machine-learning:3003
+              value: http://immich-machine-learning.productivity.svc.cluster.local:3003
             - name: IMMICH_SERVER_URL
-              value: http://immich-server:3001
+              value: http://immich-server.productivity.svc.cluster.local:3001
             - name: IMMICH_WEB_URL
-              value: http://immich-web:3000
+              value: http://immich-web.productivity.svc.cluster.local:3000
             - name: REDIS_HOSTNAME
               value: immich-redis-master
             - name: TYPESENSE_API_KEY
