--- a/photoprism-web/photoprism-secret.yaml
+++ b/photoprism-web/photoprism-secret.yaml
@@ -11,8 +11,11 @@ metadata:
   namespace: productivity
   annotations:
     avp.kubernetes.io/path: "kv/data/photoprism"
-    avp.kubernetes.io/secret-version: "1"
+    avp.kubernetes.io/secret-version: "2"
 type: Opaque
 stringData:
   PHOTOPRISM_DATABASE_DSN: <db_path>
   PHOTOPRISM_ADMIN_PASSWORD: <db_admin_pw>
+  PHOTOPRISM_ADMIN_USER: <admin_user>
+  PHOTOPRISM_ADMIN_PW: <admin_pw>
+  PHOTOPRISM_AUTH_MODE: <auth_mode>
