--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -145,6 +145,7 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: photoprism.dev-riles.xyz
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: 1Gi
     kubernetes.io/tls-acme: "true"
 spec:
   tls:
