--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -146,6 +146,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: photoprism.dev-riles.xyz
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "5000m"
+    nginx.org/client-max-body-size: "5000m"
     kubernetes.io/tls-acme: "true"
 spec:
   tls:
