--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -28,7 +28,6 @@ metadata:
 data:
   PHOTOPRISM_DATABASE_DRIVER: sqlite
   PHOTOPRISM_ORIGINALS_PATH: /photoprism/originals
-  
   PHOTOPRISM_STORAGE_PATH: /photoprism/storage
 ---
 # Source: photoprism/templates/service.yaml
@@ -145,9 +144,17 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: photoprism.dev-riles.xyz
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/proxy-body-size: "5000m"
-    nginx.org/client-max-body-size: "5000m"
     kubernetes.io/tls-acme: "true"
+    nginx.org/client-max-body-size: "5000m"
+    nginx.org/server-snippets: |
+      location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+      }
 spec:
   tls:
     - hosts:
