--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -146,15 +146,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
     nginx.org/client-max-body-size: "5000m"
-    nginx.org/server-snippets: |
-      location / {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_buffering off;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-      }
+    nginx.org/websocket-services: "true"
 spec:
   tls:
     - hosts:
