--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -146,7 +146,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
     nginx.org/client-max-body-size: "5000m"
-    nginx.org/websocket-services: "true"
+    nginx.org/websocket-services: photoprism
 spec:
   tls:
     - hosts:
