--- a/transmission-openvpn/radarr.yaml
+++ b/transmission-openvpn/radarr.yaml
@@ -70,12 +70,7 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: radarr.dev-riles.xyz.
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/server-snippets: |
-      location / {
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection $http_connection;
-       }
+    nginx.org/websocket-services: radarr
 spec:
   rules:
   - host: "radarr.dev-riles.xyz"
