--- a/transmission-openvpn/lidarr.yaml
+++ b/transmission-openvpn/lidarr.yaml
@@ -63,12 +63,7 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: lidarr.dev-riles.xyz.
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/server-snippets: |
-      location / {
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection $http_connection;
-       }
+    nginx.org/websocket-services: lidarr
 spec:
   rules:
   - host: "lidarr.dev-riles.xyz"
