--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -114,9 +114,15 @@ spec:
         - containerPort: 2342
           name: http
         volumeMounts:
-        - mountPath: /photoprism/
+        - mountPath: /photoprism/originals
+          name: originals
+        - mountPath: /photoprism/storage
           name: storage
       volumes:
+      - name: originals
+        nfs:
+          path: /tank/photoprism-media
+          server: drebin.riles.xyz
       - name: storage
         nfs:
           path: /ssd_pool/photoprism-storage
