--- a/photoprism-web/photoprism.yaml
+++ b/photoprism-web/photoprism.yaml
@@ -123,10 +123,14 @@ spec:
         nfs:
           path: /tank/photoprism-media
           server: drebin.riles.xyz
+          mountOptions:
+            - noatime
       - name: storage
         nfs:
           path: /ssd_pool/photoprism-storage
           server: drebin.riles.xyz
+          mountOptions:
+            - noatime
 ---
 # Source: photoprism/templates/ingress.yaml
 apiVersion: networking.k8s.io/v1
