--- a/transmission-openvpn/secret.yaml
+++ b/transmission-openvpn/secret.yaml
@@ -16,3 +16,4 @@ stringData:
   TRANSMISSION_RPC_ENABLED: <rpc_enable>
   TRANSMISSION_RPC_PASSWORD: <rpc_pw>
   TRANSMISSION_RPC_USERNAME: <rpc_user>
+  GLOBAL_APPLY_PERMISSIONS: false
