--- a/otel-collector/otel-collector.yaml
+++ b/otel-collector/otel-collector.yaml
@@ -14,9 +14,10 @@ spec:
       enabled: true
   config: |
     receivers:
-      jaeger:
+      otlp:
         protocols:
           grpc:
+          http:
     exporters:
       otlp:
         endpoint: http://victoria-metrics-victoria-metrics-single-server.vm.cluster.svc.local:8428/opentelemetry/api/v1/push
@@ -25,6 +26,8 @@ spec:
     service:
       pipelines:
         metrics:
+          receivers: [ otlp ]
           exporters: [ otlp ]
         logs:
+          receivers: [ otlp ]
           exporters: [ elasticsearch ]
