--- a/otel-collector/otel-collector.yaml
+++ b/otel-collector/otel-collector.yaml
@@ -20,9 +20,9 @@ spec:
           http:
     exporters:
       otlp:
-        endpoint: http://victoria-metrics-victoria-metrics-single-server.vm.cluster.svc.local:8428/opentelemetry/api/v1/push
+        endpoint: victoria-metrics-victoria-metrics-single-server.vm.cluster.svc.local:8428/opentelemetry/api/v1/push
       elasticsearch:
-        endpoints: http://victoria-logs-victoria-logs-single-server.vm.cluster.svc.local:9428/insert/elasticsearch/_bulk
+        endpoints: victoria-logs-victoria-logs-single-server.vm.cluster.svc.local:9428/insert/elasticsearch/_bulk
     service:
       pipelines:
         metrics:
