--- a/otel-collector/otel-collector.yaml
+++ b/otel-collector/otel-collector.yaml
@@ -30,4 +30,4 @@ spec:
       pipelines:
         metrics:
           receivers: [ otlp ]
-          exporters: [ otlphttp, debug ]
+          exporters: [ otlphttp ]
