--- a/speedtest-exporter/deploy.yaml
+++ b/speedtest-exporter/deploy.yaml
@@ -49,7 +49,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-  name: speedtest-expoter
+  name: speedtest-exporter
 spec:
   internalTrafficPolicy: Cluster
   ipFamilies:
