--- a/nextcloud-metrics/nextcloud-metrics.yaml
+++ b/nextcloud-metrics/nextcloud-metrics.yaml
@@ -55,3 +55,24 @@ spec:
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nextcloud-metrics
+  namespace: nextcloud
+spec:
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+  - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+  - name: metrics
+    port: 9205
+    protocol: TCP
+    targetPort: 9205
+  selector:
+    app.kubernetes.io/component: metrics
+    app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/name: nextcloud-metrics
+  type: ClusterIP
