setting ingress default

--- a/cert-manager/issuer.yaml
+++ b/cert-manager/issuer.yaml
@@ -22,4 +22,4 @@ spec:
              name: vultr-credentials
            # The ingressClass used to create the necessary ingress routes
            ingress:
-             class: traefik
+             class: nginx
