--- a/invidious/invidious-secret.yaml
+++ b/invidious/invidious-secret.yaml
@@ -9,5 +9,5 @@ type: Opaque
 stringData:
   POSTGRES_DB: <POSTGRES_DB>
   POSTGRES_PASSWORD: <POSTGRES_PASSWORD>
-  POSTGRESS_USER: <POSTGRESS_USER>
+  POSTGRES_USER: <POSTGRES_USER>
   HMAC_KEY: <HMAC_KEY>
