--- a/invidious/invidious-deployment.yaml
+++ b/invidious/invidious-deployment.yaml
@@ -27,9 +27,9 @@ spec:
         - name: INVIDIOUS_CONFIG
           value: |
             db:
-              dbname: $(POSTGRES_DB)
-              user: $(POSTGRESS_USER)
-              password: $(POSTGRES_PASSWORD)
+              dbname: "$(POSTGRES_DB)"
+              user: "$(POSTGRESS_USER)"
+              password: "$(POSTGRES_PASSWORD)"
               host: invidious-db.invidious.svc.cluster.local
               port: 5432
             check_tables: true
