--- a/invidious/invidious-deployment.yaml
+++ b/invidious/invidious-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     avp.kubernetes.io/path: "kv/data/invidious"
-    avp.kubernetes.io/secret-version: "1"
+    avp.kubernetes.io/secret-version: "2"
   labels:
     io.kompose.service: invidious
   name: invidious
@@ -20,9 +20,6 @@ spec:
     spec:
       containers:
       - name: invidious
-        envFrom:
-        - secretRef:
-            name: invidious-secret
         image: quay.io/invidious/invidious:latest
         livenessProbe:
           exec:
@@ -38,9 +35,9 @@ spec:
         - name: INVIDIOUS_CONFIG
           value: |
             db:
-              dbname: "$(POSTGRES_DB)"
-              user: "$(POSTGRESS_USER)"
-              password: "$(POSTGRES_PASSWORD)"
+              dbname: <POSTGRES_DB>
+              user: POSTGRES_USER
+              password: <POSTGRES_PASSWORD>
               host: invidious-db.invidious.svc.cluster.local
               port: 5432
             check_tables: true
@@ -48,5 +45,5 @@ spec:
             # domain:
             # https_only: false
             # statistics_enabled: false
-            hmac_key: $(HMAC_KEY)
+            hmac_key: <HMAC_KEY>
       restartPolicy: Always
