--- a/nitter/nitter-conf-cm.yaml
+++ b/nitter/nitter-conf-cm.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     avp.kubernetes.io/path: "kv/data/nitter"
     avp.kubernetes.io/secret-version: "1"
+type: Opaque
 data:
   nitter-cm.yaml: |
     [Server]
