--- a/nitter/nitter-conf-cm.yaml
+++ b/nitter/nitter-conf-cm.yaml
@@ -7,7 +7,7 @@ metadata:
     avp.kubernetes.io/secret-version: "1"
 type: Opaque
 stringData:
-  nitter-cm.yaml: |
+  nitter-config: |
     [Server]
     hostname = "nitter.dev-riles.xyz"  # for generating links, change this to your own domain/ip
     title = "nitter"
