--- a/nitter/nitter-deployment.yaml
+++ b/nitter/nitter-deployment.yaml
@@ -20,9 +20,7 @@ spec:
       - image: zedeus/nitter:latest
         livenessProbe:
           exec:
-            command:
-            - wget -nv --tries=1 --spider http://127.0.0.1:8080/Jack/status/20 ||
-              exit 1
+            command: - wget -nv --tries=1 --spider http://127.0.0.1:8080/Jack/status/20 || exit 1
           failureThreshold: 2
           periodSeconds: 30
           timeoutSeconds: 5
@@ -35,7 +33,7 @@ spec:
             drop:
             - ALL
         volumeMounts:
-        - mountPath: /src/nitter.conf
+        - mountPath: /etc/nitter
           name: nitter-config
           readOnly: true
       restartPolicy: Always
@@ -43,3 +41,5 @@ spec:
       - name: nitter-config
         secret:
           secretName: nitter-conf
+            - key: nitter-config
+              path: nitter.conf
