--- a/nitter/nitter-redis-deployment.yaml
+++ b/nitter/nitter-redis-deployment.yaml
@@ -24,6 +24,8 @@ spec:
         - "1"
         - --loglevel
         - warning
+        ports:
+        - containerPort: 6379
         image: redis:6-alpine
         livenessProbe:
           exec:
