--- a/nitter/nitter-deployment.yaml
+++ b/nitter/nitter-deployment.yaml
@@ -42,5 +42,6 @@ spec:
       - name: nitter-config
         secret:
           secretName: nitter-conf
-            - key: nitter-config
-              path: nitter.conf
+          items:
+          - key: nitter-config
+            path: nitter.conf
