--- a/transmission-openvpn/flaresolverr.yaml
+++ b/transmission-openvpn/flaresolverr.yaml
@@ -44,7 +44,7 @@ spec:
       containers:
         - name: flaresolverr
           image: "ghcr.io/flaresolverr/flaresolverr:latest"
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           env:
             - name: TZ
               value: America/Toronto
