--- a/apps/cloudnative-postgres.yaml
+++ b/apps/cloudnative-postgres.yaml
@@ -9,7 +9,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: cnpg
+    chart: cloudnative-pg
     repoURL: https://cloudnative-pg.github.io/charts
     targetRevision: 0.21.2
   syncPolicy:
