--- a/apps/cloudnative-postgres.yaml
+++ b/apps/cloudnative-postgres.yaml
@@ -9,11 +9,9 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: cloudnative-pg
-    repoURL: https://cloudnative-pg.github.io/charts
-    targetRevision: 0.21.2
-    helm:
-      releaseName: cnpg-operator
+    repoURL: https://github.com/cloudnative-pg/cloudnative-pg
+    directory:
+      include: releases/cnpg-1.23.1.yaml
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
