--- a/arr-pg/postgres-cluster.yaml
+++ b/arr-pg/postgres-cluster.yaml
@@ -19,13 +19,11 @@ spec:
   primaryUpdateStrategy: unsupervised
   bootstrap:
     initdb:
-      database: sonarr_main #app not used
-      owner: sonarr
-      database: sonarr_logs #app not used
-      owner: sonarr
-        #      postInitApplicationSQLRefs:
-        #        configMapRefs:
-        #        - name: init-arr-dbs
-        #          key: sql
+      database: app #app not used
+      owner: app
+      postInitSQLRefs:
+        configMapRefs:
+        - name: init-arr-dbs
+          key: sql
   storage:
     size: 1Gi
