--- a/arr-pg/postgres-cluster.yaml
+++ b/arr-pg/postgres-cluster.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-data:
-  sql: |
-    create user sonarr;
-    create database sonarr owner sonarr;
-    create database sonarr_log owner sonarr;
-metadata:
-  name: init-arr-dbs
-  namespace: arr
----
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
@@ -24,7 +13,37 @@ spec:
       postInitSQL:
         - create user sonarr;
         - create database sonarr owner sonarr;
-        - create database sonarr_log owner sonarr;
-
+        - create database sonarr-log owner sonarr;
+        - create user radarr;
+        - create database radarr owner radarr;
+        - create database radarr-log owner radarr;
+        - create user lidarr;
+        - create database lidarr owner lidarr;
+        - create database lidarr-log owner lidarr;
+        - create user readarr;
+        - create database readarr owner readarr;
+        - create database readarr-log owner readarr;
+        - create database readarr-cache owner readarr;
+        - create user prowlarr;
+        - create database prowlarr owner prowlarr;
+        - create database prowlarr-log owner prowlarr;
+        - create user jellyfin;
+        - create database jellyfin owner jellyfin;
+        - create database jellyfin-log owner jellyfin;
+      postInitApplicationSQLRefs:
+        secretRefs:
+          - name: pg-arr-users
+            key: sql
   storage:
     size: 1Gi
+---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: pg-arr-users
+  namespace: arr
+  annotations:
+    avp.kubernetes.io/path: "kv/data/arr-pg-users"
+type: Opaque
+stringData:
+  sql: <sql>
