--- a/transmission-openvpn/sonarr-pg.yaml
+++ b/transmission-openvpn/sonarr-pg.yaml
@@ -39,6 +39,7 @@ spec:
         - name: sonarr-pg-config-xml
           secret:
             secretName: sonarr-pg-config
+            key: config.xml
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
