--- a/transmission-openvpn/lidarr-pg.yaml
+++ b/transmission-openvpn/lidarr-pg.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lidarr
+  name: lidarr-pg
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: lidarr
+      app: lidarr-pg
   template:
     metadata:
       labels:
-        app: lidarr
+        app: lidarr-pg
     spec:
       containers:
         - env:
