--- a/transmission-openvpn/readarr-pg.yaml
+++ b/transmission-openvpn/readarr-pg.yaml
@@ -35,7 +35,7 @@ spec:
           volumeMounts:
             - mountPath: /config
               name: readarr-pg-config
-            - name: radarr-pg-config-xml
+            - name: readarr-pg-config-xml
               mountPath: /secrets
             - mountPath: /data
               name: nfs-data
